c4prj2_input/grade.txt
Grading at Thu Mar 11 11:09:42 UTC 2021
Compiling cards.c -> cards.o
Compiling deck.c -> deck.o
Compiling input.c -> input.o
input.c: In function ‘hand_from_string’:
input.c:18:22: error: expected statement before ‘)’ token
  if (str[i-2] == '?')) {
                      ^
input.c:22:2: error: expected ‘}’ before ‘else’
  else{
  ^
input.c: At top level:
input.c:30:3: error: expected identifier or ‘(’ before ‘return’
   return hand;
   ^
input.c:31:1: error: expected identifier or ‘(’ before ‘}’ token
 }
 ^
input.c: In function ‘hand_from_string’:
input.c:28:6: error: control reaches end of non-void function [-Werror=return-type]
      }
      ^
cc1: all warnings being treated as errors
Compilation of input.c failed

Overall Grade: F
